Closed
Bug 815602
Opened 13 years ago
Closed 12 years ago
Invalid drawable error in console after starting Firefox
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla21
People
(Reporter: virgil.dicu, Assigned: BenWa)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
57.93 KB,
image/png
|
Details | |
|
1.17 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:18.0) Gecko/18.0 Firefox/18.0 beta 1
Build ID: 20121121075611
Steps to reproduce:
1. Install Firefox in Applications directory
2. Open Terminal and run /Applications/Firefox.app/Contents/MacOS/firefox
Expected result:
Firefox should start and no error should appear in Terminal.
Actual result:
"firefox[nnnn:nnn] invalid drawable" error appears in Terminal, as soon as Firefox starts.
This error appears from Firefox 18.0 to Latest Nightly and Latest Aurora.
Last good nightly: 2012-09-28
First bad nightly: 2012-09-29
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=895f66c4eada&tochange=c09a0c022b2e
Comment 1•13 years ago
|
||
(The error message is also visible in Console.app, even if you don't launch Firefox via the command line.)
From my local builds:
OK: 9f476b4ac1e1
Bad: 23f1b8c7d17e
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=9f476b4ac1e1&tochange=23f1b8c7d17e
Which is mostly DLBI stuff.
Blocks: dlbi
Keywords: regression
| Assignee | ||
Comment 2•12 years ago
|
||
This is easy to catch by using 'break NSLog':
http://mxr.mozilla.org/mozilla-central/source/gfx/gl/GLContextProviderCGL.mm#434
Removing this line locally fixes the problem. We seem to set the view on every frame in nsChildView. I haven't taken the time to make sure that removing this line is safe.
Matt any though if the changes you made changed something with this?
Comment 3•12 years ago
|
||
I believe I added that when I made the refresh driver timing changes. From memory, we failed tests without it, getting an invalid framebuffer error/abort within GL layers.
Run it through try maybe?
Comment 4•12 years ago
|
||
Actually, I added the one in nsChildView.
This error is probably happening because we paint ThebesLayers (and thus create a GLContext) before the nsChildView is ready to draw for the first time.
Seems like a safe change to me
| Assignee | ||
Comment 5•12 years ago
|
||
Ok, I'll run it through try.
| Assignee | ||
Comment 6•12 years ago
|
||
https://tbpl.mozilla.org/?tree=Try&rev=7412bb2c3e7a
Waiting for green to r?
Assignee: nobody → bgirard
Status: NEW → ASSIGNED
| Assignee | ||
Comment 7•12 years ago
|
||
| Assignee | ||
Updated•12 years ago
|
Attachment #707278 -
Flags: review?(matt.woodrow)
Updated•12 years ago
|
Attachment #707278 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 8•12 years ago
|
||
Comment 9•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
| Reporter | ||
Comment 10•12 years ago
|
||
Verified the fix for Latest Nightly using the STR from comment 0.
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:21.0) Gecko/20130205 Firefox/21.0
Build ID: 20130205031033
You need to log in
before you can comment on or make changes to this bug.
Description
•