Bug 815602 - Fix invalid drawable error in console after starting Firefox. r=mattwoodrow

--HG--
extra : rebase_source : c24a03252404ac5d25d4fdb62c6f749ea34dab86